# marray

./: .gitignore  CMakeLists.txt  configure  configure.ac
.circleci/: config.yml
marray/: array_1d.hpp  expression.hpp  marray.hpp  marray_base.hpp  marray_iterator.hpp  marray_slice.hpp  marray_view.hpp  range.hpp  short_vector.hpp  types.hpp
marray/detail/: config.hpp  utility.hpp  vector.hpp
marray/dpd/: dpd_marray_base.hpp  dpd_range.hpp
marray/fwd/: marray_fwd.hpp
test/: marray.cxx
